dropshot/tests/fail/bad_channel15.stderr
error: future cannot be sent between threads safely
  --> tests/fail/bad_channel15.rs:11:1
   |
11 | / #[channel {
12 | |     protocol = WEBSOCKETS,
13 | |     path = "/test",
14 | | }]
   | |__^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/fail/bad_channel15.rs:11:1: 14:3}`, the trait `Send` is not implemented for `Rc<i32>`
note: future is not `Send` as this value is used across an await
  --> tests/fail/bad_channel15.rs:20:50
   |
19 |     let _non_send_type = Rc::new(0);
   |         -------------- has type `Rc<i32>` which is not `Send`
20 |     tokio::time::sleep(Duration::from_millis(1)).await;
   |                                                  ^^^^^ await occurs here, with `_non_send_type` maybe used later
note: required by a bound in `WebsocketUpgrade::handle`
  --> src/websocket.rs
   |
   |     pub fn handle<C, F>(mut self, handler: C) -> WebsocketEndpointResult
   |            ------ required by a bound in this associated function
...
   |         F: Future<Output = WebsocketChannelResult> + Send + 'static,
   |                                                      ^^^^ required by this bound in `WebsocketUpgrade::handle`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)
